# link-shortener

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/pages/: index.js
frontend/pages/api/: shorten.js
src/: main.rs  slugs.rs
