[package]
name = "link-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
names = { version = "0.14.0", default-features = false }
salvo = { version = "*", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
sled = "*"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
http3 = []